--- a/foodSearch/templates/foodSearch/base.html
+++ b/foodSearch/templates/foodSearch/base.html
@@ -53,7 +53,7 @@
           </li>
           {% if user.is_authenticated %}
             <li class="nav-item">
-              <a class="nav-link load" title="Mes aliments" href="{% url 'foodSearch:watchlist' %}"> <i class="fa fa-carrot" aria-hidden="true"></i> </a>
+              <a id="favorite" class="nav-link load" title="Mes aliments" href="{% url 'foodSearch:watchlist' %}"> <i class="fa fa-carrot" aria-hidden="true"></i> </a>
             </li>
             <li class="nav-item">
               <a id="disconnection" class="nav-link" title="Me déconnecter" data-toggle="modal" data-target="#modalLogOut">
