notconnected modal fade fixed

--- a/foodSearch/templates/foodSearch/results.html
+++ b/foodSearch/templates/foodSearch/results.html
@@ -59,8 +59,9 @@
                     {% endif %}
                   </form>
                 {% else %}
-                    <a href="" class="NotConnected" data-toggle="modal" data-target="#modalNotConnected">
-                      <span class='fas fa-floppy-o'></span> Sauvegarder</a>
+                  <a class="NotConnected" data-toggle="modal" data-target="#modalNotConnected">
+                    <span class='fas fa-floppy-o'></span> Sauvegarder
+                  </a>
                 {% endif %}
 
                   <span class="grade upimg {{ substitute.nutrition_grade_fr }}">{{ substitute.nutrition_grade_fr }}</span>
