--- a/foodSearch/templates/registration/log.html
+++ b/foodSearch/templates/registration/log.html
@@ -98,7 +98,7 @@
 <!-- End of Register Modal -->
 
 <!--  save_favorite not connected Form Modal -->
-<div id="modalNotConnected" class="modal" tabindex="-1" role="dialog">
+<div id="modalNotConnected" class="modal fade" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
