bug login et hideloader resolved

--- a/foodSearch/templates/registration/log.html
+++ b/foodSearch/templates/registration/log.html
@@ -18,7 +18,8 @@
               </div>
               <p class="text-danger text-center no-user-error" style="display:none;">Utilisateur introuvable, créez un compte ou réessayez</p>
               <div class="form-group">
-                <input type="password" name="password" id="login-password" class="form-control" placeholder="Mot de passe" required="required" />
+                <input type="password" name="password" id="login-password" class="form-control"
+                 placeholder="Mot de passe" required="required" />
               </div>
 
               <p class="text-danger text-center password-error" style="display:none;">Mot de passe incorrect</p>
