--- a/foodSearch/templates/foodSearch/base.html
+++ b/foodSearch/templates/foodSearch/base.html
@@ -44,21 +44,32 @@
           </li>
           <li class="nav-item">
             {% if user.is_authenticated %}
-              <a class="nav-link" title="Mon compte" href="{% url 'foodSearch:userpage' %}"> <i class="fa fa-user fa-2x" aria-hidden="true"></i> </a>
+              <a class="nav-link" title="Mon compte" href="{% url 'foodSearch:userpage' %}">
+                <i class="fa fa-user fa-2x" aria-hidden="true"></i>
+                <span class="nav-title pl-3">Mon compte</span>
+              </a>
+
             {% else %}
-              <a id="connect" class="nav-link connection" title="Me connecter" data-toggle="modal" data-target="#modalLogIn">
+              <a id="connect" class="nav-link connection" title="Me connecter" data-toggle="modal" data-target="#modalLogIn" href="">
                 <i class="fa fa-user fa-2x"></i>
+                <span  class="nav-title pl-3">Me connecter</span>
               </a>
             {% endif %}
           </li>
           {% if user.is_authenticated %}
             <li class="nav-item">
-              <a id="favorite" class="nav-link load" title="Mes aliments" href="{% url 'foodSearch:watchlist' %}"> <i class="fa fa-carrot" aria-hidden="true"></i> </a>
+              <a id="favorite" class="nav-link load" title="Mes aliments" href="{% url 'foodSearch:watchlist' %}">
+                <i class="fa fa-carrot" aria-hidden="true"></i>
+                <span  class="nav-title pl-3">Mes aliments</span>
+            </a>
+
             </li>
             <li class="nav-item">
-              <a id="disconnection" class="nav-link" title="Me déconnecter" data-toggle="modal" data-target="#modalLogOut">
+              <a id="disconnection" class="nav-link" title="Me déconnecter" data-toggle="modal" data-target="#modalLogOut" href="">
                 <i class="fas fa-sign-out-alt fa-2x"></i>
+                <span  class="nav-title pl-3">Me déconnecter</span>
               </a>
+
             </li>
           {% endif %}
         </ul>
