--- a/foodSearch/templates/foodSearch/results.html
+++ b/foodSearch/templates/foodSearch/results.html
@@ -53,7 +53,7 @@
               </div>
 
               <div class="row justify-content-center">
-                <a href="/detail/{{ product.id }}/">En savoir plus sur ce produit</a><br>
+                <a href="/detail/{{ substitute.id }}/">En savoir plus sur ce produit</a><br>
               </div>
 
               <div class="row justify-content-center">
